# hoki

./: .gitignore  .rtd-environment.yml  .travis.yml  AgeWizard.html  AgeWizard.ipynb  CMDs.html  ComplexStellarPopulations.html  Fitting_SEDs_of_a_data_cube_with_BPASS-hoki-ppxf.html  Fitting_the_region_around_the_transient.html  HR_diagrams.html  HR_diagrams.ipynb  LICENSE.rst  MANIFEST.in  MIAPBP_EvE_tutorial.html  Makefile  ModelDataCompiler.html  ModelSearch.html  README.rst  Spectra.html  Spectra.ipynb  Transient_rates.html  Transient_rates.ipynb  Voronoi_binning_of_SED_data.html  appveyor.yml  citation.html  genindex.html  index.html  intro.html  make.bat  manual.html  objects.inv  py-modindex.html  pyproject.toml  quick_start.html  search.html  searchindex.js  sedfitting.html  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bpass.md  bugs.md  docs.md  feature.md
.github/workflows/: ci_all.yml  ci_release.yml  python-app.yml  testing.yml
_sources/: AgeWizard.ipynb.txt  CMDs.ipynb.txt  ComplexStellarPopulations.ipynb.txt  Fitting SEDs of a data cube with BPASS-hoki-ppxf.ipynb.txt  Fitting_the_region_around_the_transient.ipynb.txt  ModelDataCompiler.ipynb.txt  ModelSearch.ipynb.txt  Voronoi_binning_of_SED_data.ipynb.txt  citation.rst.txt  index.rst.txt  intro.rst.txt  manual.rst.txt  sedfitting.rst.txt
_static/: documentation_options.js
astropy_helpers/: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  appveyor.yml  setup.cfg  setup.py
astropy_helpers/.circleci/: config.yml
astropy_helpers/astropy_helpers/: __init__.py  conftest.py  distutils_helpers.py  git_helpers.py  openmp_helpers.py  setup_helpers.py  utils.py  version_helpers.py
astropy_helpers/astropy_helpers/commands/: _dummy.py  build_ext.py  build_sphinx.py  test.py
astropy_helpers/astropy_helpers/sphinx/: conf.py
astropy_helpers/astropy_helpers/tests/: __init__.py  test_ah_bootstrap.py  test_git_helpers.py  test_openmp_helpers.py  test_setup_helpers.py
astropy_helpers/docs/: advanced.rst  api.rst  basic.rst  conf.py  developers.rst  index.rst  known_issues.rst  updating.rst  using.rst
astropy_helpers/licenses/: LICENSE_ASTROSCRAPPY.rst
docs/: AgeWizard.html  CMDs.html  HR_diagrams.html  Spectra.html  Spectra.ipynb  Transient_rates.html  citation.html  cmd.html  conf.py  constants.html  documentation.html  genindex.html  hrdiagrams.html  index.html  intro.html  load.html  manual.html  objects.inv  plots.html  py-modindex.html  quick_start.html  search.html  searchindex.js  test.html
docs/_sources/: CMDs.ipynb.txt  HR_diagrams.ipynb.txt  Spectra.ipynb.txt  Transient_rates.ipynb.txt  citation.rst.txt  cmd.rst.txt  constants.rst.txt  index.rst.txt  intro.rst.txt  manual.rst.txt  plots.rst.txt  quick_start.rst.txt  test.rst.txt
docs/_static/: custom.css
docs/hoki/: .buildinfo  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
hoki/: README.md  __init__.py  _astropy_init.py  age_utils.py  cmd.py  constants.py  data_compilers.py  eve.py  evolution_explorer.py  hrdiagrams.py  interpolators.py  load.py  search.py  spec.py  version.py
hoki/age/: utils.py  wizard.py
hoki/csp/: csp.py  csp_utils.py  event_rate.py  eventrate.py  sfh.py  spectra.py  utils.py
hoki/data/: LICK.LICK.U.xml  input_bpass_z020_bin_imf135_300  mass_per_bin.txt  settings.yaml  test_SFH.txt
hoki/example_subpkg/: setup_package.py
hoki/sedfitting/: __init__.py  kvn.py  lordcommander.py  ppxfwizard.py
hoki/spec/: synphot.py  utils.py
hoki/stats/: starcounts.py
hoki/tests/: test_aging.py  (+10 more)
paper/: paper.bib  paper.md
source/: Transient_rates.ipynb  conf.py  hrdiagrams.rst  index.rst  intro.rst  plots.rst
tutorials/: HR_diagrams.ipynb  Spectra.ipynb  Transient_rates.html  Transient_rates.ipynb  tuto.mplstyle
(+6059 files in other folders)
