[metadata]
name = hoki
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
#version = 1.5.0 - needed to remove for migration
author = H. F. Stevance
author_email = hfstevance@gmail.com
description = A Python interface to BPASS - Bridging the gap between observation and theory
long_description = Please check the full documentation https://heloises.github.io/hoki/intro.html
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://heloises.github.io/hoki/intro.html
edit_on_github = False
github_project = heloises/hoki


[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
zip_safe = False
packages =  find:
install_requires = 
	numpy
	pandas
	matplotlib
	pyyaml
	wheel
	numba
	emcee
	corner
	scipy
	astropy
	specutils
setup_requires = setuptools_scm
python_requires = >=3.5
#use_2to3 = False

[options.extras_require]
test =
	pytest-astropy

[options.entry_points]
console_scripts =

    astropy-package-template-example = packagename.example_mod:main


[options.package_data]
* = *.c
hoki = data/* , data/csp_test_data/*
#hoki.tests = coveragerc
hoki.tests = data/*

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
testpaths = "hoki" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
#addopts = --doctest-rst
#minversion = 3.0
#norecursedirs = build docs/_build
#doctest_plus = enabled
#addopts = -p no:warnings

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
