[metadata]
name = astropy-helpers
version = 3.2.1
provides = astropy_helpers
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/astropy/astropy-helpers
description = Utilities for building and installing packages in the Astropy ecosystem
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Setuptools Plugin
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
zip_safe = False
python_requires = >=3.5
packages = find:

[options.package_data]
astropy_helpers.commands = src/compiler.c

[options.extras_require]
docs = sphinx-astropy

[tool:pytest]
norecursedirs =
    .tox
    astropy_helpers/tests/package_template
python_functions = test_
